# pysigQC-metrics

./: .gitignore  LICENSE  README.md  pyproject.toml
pysigqc_metrics/: __init__.py  compare_metrics.py  eval_compactness.py  eval_expr.py  eval_stan.py  eval_var.py  pipeline.py  radar_chart.py  utils.py
pysigqc_metrics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pysigqc_metrics/plots/: __init__.py  _colors.py  _style.py  plot_radar.py
scripts/: _io_helpers.py  test_metrics.py
tests/: conftest.py  test_compare_metrics.py  test_eval_compactness.py  test_eval_expr.py  test_eval_stan.py  test_eval_var.py  test_radar_chart.py
tests/fixtures/: fixture_dataset_A.csv  fixture_dataset_B.csv  fixture_signatures.csv
tests/fixtures/reference_outputs/: compact_autocor_compact_sig_dataset_A.csv  compact_autocor_compact_sig_dataset_B.csv  compact_autocor_diffuse_sig_dataset_A.csv  compact_autocor_diffuse_sig_dataset_B.csv  compact_radar_compact_sig_dataset_A.csv  compact_radar_compact_sig_dataset_B.csv  compact_radar_diffuse_sig_dataset_A.csv  compact_radar_diffuse_sig_dataset_B.csv  expr_na_prop_compact_sig_dataset_A.csv  expr_na_prop_compact_sig_dataset_B.csv  expr_na_prop_diffuse_sig_dataset_A.csv  expr_radar_compact_sig_dataset_A.csv  expr_radar_compact_sig_dataset_B.csv  expr_radar_diffuse_sig_dataset_A.csv  expr_radar_diffuse_sig_dataset_B.csv  expr_thresholds.csv  metrics_radar_compact_sig_dataset_A.csv  metrics_radar_compact_sig_dataset_B.csv  metrics_radar_diffuse_sig_dataset_A.csv  metrics_radar_diffuse_sig_dataset_B.csv  radar_areas.csv  (+21 more)
